# Technical-Interview-Assignment-Langaku-Backend

./: Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  schema.yml
assignment/: middleware.py  serializers.py  settings.py  urls.py  views.py
assignment/management/commands/: init_data.py
assignment/migrations/: 0001_initial.py
assignment/tests/: test_recordsjson.py  test_user_me.py  test_user_summary.py
